--- a/gistguild-node/src/main/resources/templates/welcome.html
+++ b/gistguild-node/src/main/resources/templates/welcome.html
@@ -14,7 +14,8 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Registro Digitale</a>
+    <a class="navbar-brand" href="#">Gestione partecipanti</a>
+    <a class="navbar-brand" href="/product">Gestione prodotti</a>
 </nav>
 
 <main role="main" class="container">
