Code HTML refactoring

--- a/gistguild-node/src/main/resources/templates/afterInit.html
+++ b/gistguild-node/src/main/resources/templates/afterInit.html
@@ -14,7 +14,9 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Registro Digitale</a>
+    <a class="navbar-brand" href="/">Partecipanti</a>
+    <a class="navbar-brand" href="/product">Prodotti</a>
+    <a class="navbar-brand" href="/order">Ordini</a>
 </nav>
 
 <main role="main" class="container">
