--- a/gistguild-node/src/main/resources/templates/order.html
+++ b/gistguild-node/src/main/resources/templates/order.html
@@ -14,9 +14,9 @@
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="/">Gestione partecipanti</a>
-    <a class="navbar-brand" href="/product">Gestione prodotti</a>
-    <a class="navbar-brand" href="#">Gestione ordini</a>
+    <a class="navbar-brand" href="/">Partecipanti</a>
+    <a class="navbar-brand" href="/product">Prodotti</a>
+    <a class="navbar-brand" href="#">Ordini</a>
 </nav>
 
 <main role="main" class="container">
