--- a/gistguild-node/src/main/resources/templates/afterInit.html
+++ b/gistguild-node/src/main/resources/templates/afterInit.html
@@ -7,7 +7,7 @@
     <title>Amministrazione della copia locale di un Registro</title>
     <script th:src="@{webjars/jquery/3.4.0/jquery.min.js}"></script>
     <link rel="stylesheet" th:href="@{webjars/bootstrap/4.3.1/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/static/styles/main.css}"/>
 
 </head>
 
