--- a/gistguild-node/src/main/resources/templates/order.html
+++ b/gistguild-node/src/main/resources/templates/order.html
@@ -1,69 +1,76 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" class="h-100">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Amministrazione della copia locale di un Registro</title>
-    <script th:src="@{webjars/jquery/3.4.0/jquery.min.js}"></script>
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.3.1/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <title>GIST Guild</title>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles/main.css}"/>
 
 </head>
+<body class="d-flex h-100 text-center text-bg-dark">
 
-<body>
+<div class="d-flex w-100 p-3 mx-auto flex-column">
+    <header>
+        <div>
+            <img th:src="@{/images/logo.jpg}" alt="GIST Logo" style="width: 50px; position: absolute;left: 15px;" class="logo">
+            <nav class="nav nav-masthead justify-content-center float-md-end">
+                <a class="nav-link fw-bold py-1 px-0" href="/">Home</a>
+                <a class="nav-link fw-bold py-1 px-0" href="/product">Catalog</a>
+                <a class="nav-link fw-bold py-1 px-0" href="/participant">Participants</a>
+                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"  href="/order">Orders</a>
+            </nav>
+        </div>
+    </header>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="/">Partecipanti</a>
-    <a class="navbar-brand" href="/product">Prodotti</a>
-    <a class="navbar-brand" href="#">Ordini</a>
-</nav>
+    <main class="w-100">
 
-<main role="main" class="container">
-
-    <div class="starter-template">
-        <h1>Lista degli ordini</h1>
-        <h2>
-            <span th:text="'Il nome della tua istanza : ' + ${instanceName}"></span>
-        </h2>
-        <h3><td th:text="${startup} ? 'Il Registro è correttamente inizializzato' : 'Il Registro non è correttamente inizializzato'" /></h3>
-        <h3><td th:text="${validation} ? 'Il Registro è valido' : 'Il Registro è corrotto'" /></h3>
-    </div>
-
-    <div style="display: flex; margin: 1em">
-        <form th:action="@{/init}">
-            <button class="btn btn-primary" type="submit" style="margin: 0.5em">Aggiornamento della copia</button>
-        </form>
-    </div>
-
-    <table class="table">
-        <thead>
+        <hr/>
+        <h2>Orders list</h2>
+        <hr/>
+        <table class="table table-dark table-striped table-hover">
+            <thead>
             <tr>
-                <th scope="col">Nome del prodotto</th>
-                <th scope="col">Mail acquirente</th>
-                <th scope="col">Telegram ID acquirente</th>
-                <th scope="col">Quantià</th>
-                <th scope="col">Totale</th>
-                <th scope="col">Indirizzo consegna</th>
-                <th scope="col">Data e ora dell'inserimento</th>
+                <th scope="col">Product name</th>
+                <th scope="col">Customer mail</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Address</th>
+                <th scope="col">Insertion date/time</th>
+                <th scope="col">Actions</th>
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
             <tr th:each="item : ${items}">
                 <td scope="row" th:text="${item.productName}"></td>
                 <td scope="row" th:text="${item.customerMail}"></td>
-                <td scope="row" th:text="${item.customerTelegramUserId}"></td>
                 <td scope="row" th:text="${item.quantity}"></td>
                 <td scope="row" th:text="${item.amount}"></td>
                 <td scope="row" th:text="${item.address}"></td>
-                <td scope="row" th:text="${item.timestamp}+' da '+${item.nodeInstanceName}"></td>
+                <td scope="row" th:text="${item.timestamp}+' by '+${item.nodeInstanceName}"></td>
+                <td scope="row">
+                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                        <button type="button" class="btn btn-danger btn-sm">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                 class="bi bi-trash" viewBox="0 0 16 16">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                <path fill-rule="evenodd"
+                                      d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                            </svg>
+                        </button>
+                    </div>
+                </td>
             </tr>
-        </tbody>
-    </table>
-
-</main>
-<!-- /.container -->
-
-<script type="text/javascript" th:src="@{webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
+            </tbody>
+        </table>
+    </main>
+</div>
 </body>
 </html>
