--- a/gistguild-node/src/main/resources/templates/welcome.html
+++ b/gistguild-node/src/main/resources/templates/welcome.html
@@ -1,63 +1,49 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" class="h-100">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Amministrazione della copia locale di un Registro</title>
-    <script th:src="@{webjars/jquery/3.4.0/jquery.min.js}"></script>
-    <link rel="stylesheet" th:href="@{webjars/bootstrap/4.3.1/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <title>GIST Guild</title>
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/styles/main.css}"/>
 
 </head>
+<body class="d-flex h-100 text-center text-bg-dark">
 
-<body>
+<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+    <header class="mb-auto">
+        <div>
+            <img th:src="@{/images/logo.jpg}" alt="GIST Logo" style="width: 50px">
+            <nav class="nav nav-masthead justify-content-center float-md-end">
+                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
+                <a class="nav-link fw-bold py-1 px-0" href="/product">Catalog</a>
+                <a class="nav-link fw-bold py-1 px-0" href="/participant">Participants</a>
+                <a class="nav-link fw-bold py-1 px-0" href="/order">Orders</a>
+            </nav>
+        </div>
+    </header>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Partecipanti</a>
-    <a class="navbar-brand" href="/product">Prodotti</a>
-    <a class="navbar-brand" href="/order">Ordini</a>
-</nav>
+    <main class="px-3">
+        <h1>GIST Guild.</h1>
+        <p class="lead">A Telegram BOT Order Management System based on a <b>data distriduted federated universe</b></p>
+        <p class="lead">
+            <a href="https://github.com/gvincenzi/gistguild" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
+        </p>
+    </main>
 
-<main role="main" class="container">
+    <footer class="mt-auto text-white-50">
+        <p>GIST Guild is a open source poject on <a href="https://getbootstrap.com/" class="text-white">GitHub</a>, developed by <a
+                href="https://www.linkedin.com/in/giuseppevincenzi/?originalSubdomain=fr" class="text-white">Giuseppe Vincenzi</a>.</p>
+    </footer>
+</div>
 
-    <div class="starter-template">
-        <h1>Lista dei documenti</h1>
-        <h2>
-            <span th:text="'Il nome della tua istanza : ' + ${instanceName}"></span>
-        </h2>
-        <h3><td th:text="${startup} ? 'Il Registro è correttamente inizializzato' : 'Il Registro non è correttamente inizializzato'" /></h3>
-        <h3><td th:text="${validation} ? 'Il Registro è valido' : 'Il Registro è corrotto'" /></h3>
-    </div>
 
-    <div style="display: flex; margin: 1em">
-        <form th:action="@{/init}">
-            <button class="btn btn-primary" type="submit" style="margin: 0.5em">Aggiornamento della copia</button>
-        </form>
-    </div>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">Mail</th>
-                <th scope="col">Data e ora dell'inserimento</th>
-                <th scope="col">Telegram User ID</th>
-                <th scope="col">Identificativo</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="item : ${items}">
-                <td scope="row" th:text="${item.mail}"></td>
-                <td scope="row" th:text="${item.timestamp}+' da '+${item.nodeInstanceName}"></td>
-                <td scope="row" th:text="${item.telegramUserId}"></td>
-                <td scope="row" th:text="${item.id}"></td>
-            </tr>
-        </tbody>
-    </table>
-
-</main>
-<!-- /.container -->
-
-<script type="text/javascript" th:src="@{webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 </body>
 </html>
