--- a/gistguild-node/src/main/resources/templates/product.html
+++ b/gistguild-node/src/main/resources/templates/product.html
@@ -20,7 +20,8 @@
 <div class="d-flex w-100 p-3 mx-auto flex-column">
     <header>
         <div>
-            <img th:src="@{/images/logo.jpg}" alt="GIST Logo" style="width: 50px; position: absolute;left: 15px;" class="logo">
+            <img th:src="@{/images/logo.jpg}" alt="GIST Logo" style="width: 50px; position: absolute;left: 15px;"
+                 class="logo">
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link fw-bold py-1 px-0" href="/">Home</a>
                 <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/product">Catalog</a>
@@ -35,6 +36,71 @@
         <hr/>
         <h2>Catalog</h2>
         <hr/>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+
+            <div class="modal-dialog">
+                <div class="modal-content bg-dark">
+                    <form action="#" th:action="@{/product}" th:object="${newProduct}" method="post">
+                        <div class="modal-header">
+                            <h5 class="modal-title">New product</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body row g-3">
+                            <div class="row g-3">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Name" aria-label="Name"
+                                           th:field="*{name}"/>
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Description"
+                                           aria-label="Description" th:field="*{description}"/>
+                                </div>
+                            </div>
+                            <div class="row g-3">
+                                <div class="col">
+                                    <input type="number" class="form-control" placeholder="Price" aria-label="Price"
+                                           th:field="*{price}"/>
+                                </div>
+                                <div class="col">
+                                    <input type="number" class="form-control" placeholder="Quantity"
+                                           aria-label="Quantity" th:field="*{availableQuantity}"/>
+                                </div>
+                                <div class="col">
+                                    <div class="form-check" style="position: absolute;">
+                                        <input class="form-check-input" type="checkbox" id="delivery"
+                                               th:field="*{delivery}">
+                                        <label class="form-check-label" for="delivery">
+                                            Delivery
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row g-3">
+                                <div class="col">
+                                    <input type="url" class="form-control" placeholder="URL" aria-label="URL"
+                                           th:field="*{url}"/>
+                                </div>
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Password" aria-label="Password"
+                                           th:field="*{password}"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <input class="btn btn-primary" type="reset" value="Reset">
+                            <input class="btn btn-success" type="submit" value="Submit">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Insert new product
+        </button>
+
         <table class="table table-dark table-striped table-hover">
             <thead>
             <tr>
