--- a/gistguild-node/src/main/resources/templates/product.html
+++ b/gistguild-node/src/main/resources/templates/product.html
@@ -37,11 +37,13 @@
         <h2>Catalog</h2>
         <hr/>
 
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="Product" aria-hidden="true">
 
             <div class="modal-dialog">
                 <div class="modal-content bg-dark">
                     <form action="#" th:action="@{/product}" th:object="${newProduct}" method="post">
+                        <input type="hidden" class="form-control" placeholder="ID" aria-label="ID"
+                               th:field="*{id}"/>
                         <div class="modal-header">
                             <h5 class="modal-title">New product</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -91,6 +93,9 @@
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <input class="btn btn-primary" type="reset" value="Reset">
                             <input class="btn btn-success" type="submit" value="Submit">
+                            <div class="progress" hidden>
+                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                            </div>
                         </div>
                     </form>
                 </div>
@@ -122,13 +127,13 @@
                 <td scope="row" th:text="${item.availableQuantity}"></td>
                 <td scope="row" th:text="${item.delivery}"></td>
                 <td scope="row">
-                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                        <button type="button" class="btn btn-warning btn-sm">
+                    <div class="btn-group" role="group" aria-label="Actions">
+                        <a role="button" class="btn btn-warning btn-sm" th:href="'/product/'+${item.getId()}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-pencil" viewBox="0 0 16 16">
                                 <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
                             </svg>
-                        </button>
+                        </a>
                         <button type="button" class="btn btn-danger btn-sm">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                  class="bi bi-trash" viewBox="0 0 16 16">
@@ -144,5 +149,14 @@
         </table>
     </main>
 </div>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+        if ([[${newProduct.id}]] != null) {
+            var productModal = new bootstrap.Modal(document.getElementById("productModal"), {});
+            productModal.show();
+        }
+    /*]]>*/
+</script>
 </body>
 </html>
