--- a/gistguild-node/src/main/resources/templates/product.html
+++ b/gistguild-node/src/main/resources/templates/product.html
@@ -13,6 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/styles/main.css}"/>
+    <script src=https://code.jquery.com/jquery-3.6.3.min.js></script>
 
 </head>
 <body class="d-flex h-100 text-center text-bg-dark">
@@ -41,7 +42,7 @@
 
             <div class="modal-dialog">
                 <div class="modal-content bg-dark">
-                    <form action="#" th:action="@{/product}" th:object="${newProduct}" method="post">
+                    <form action="#" th:action="@{/product}" th:object="${newProduct}" method="post" onsubmit="progress()">
                         <input type="hidden" class="form-control" placeholder="ID" aria-label="ID"
                                th:field="*{id}"/>
                         <div class="modal-header">
@@ -88,14 +89,18 @@
                                            th:field="*{password}"/>
                                 </div>
                             </div>
+                            <div class="row g-3">
+                                <div class="progress" id="progressbar_div" style="display: none;">
+                                    <div id="progressbar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                        <span id="current-progress"></span>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <input class="btn btn-primary" type="reset" value="Reset">
                             <input class="btn btn-success" type="submit" value="Submit">
-                            <div class="progress" hidden>
-                                <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
-                            </div>
                         </div>
                     </form>
                 </div>
@@ -156,6 +161,25 @@
             var productModal = new bootstrap.Modal(document.getElementById("productModal"), {});
             productModal.show();
         }
+
+    function progress() {
+        var current_progress = 0;
+        var interval = setInterval(function() {
+            if (current_progress > 100) {
+                clearInterval(interval);
+                $("#progressbar_div")
+                    .hide()
+            } else {
+                $("#progressbar")
+                    .css("width", current_progress + "%")
+                    .attr("aria-valuenow", current_progress)
+                    .text(current_progress + "% Complete");
+                $("#progressbar_div")
+                    .show()
+            }
+            current_progress += 25;
+        }, 1000);
+    }
     /*]]>*/
 </script>
 </body>
