CorrelationID cache added to node module

--- a/gistguild-node/src/main/resources/templates/product.html
+++ b/gistguild-node/src/main/resources/templates/product.html
@@ -107,7 +107,7 @@
             </div>
         </div>
 
-        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#productModal">
             Insert new product
         </button>
 
@@ -177,7 +177,7 @@
                 $("#progressbar_div")
                     .show()
             }
-            current_progress += 25;
+            current_progress += 10;
         }, 1000);
     }
     /*]]>*/
