Order visibility change

--- a/gistguild-node/src/main/resources/templates/product.html
+++ b/gistguild-node/src/main/resources/templates/product.html
@@ -46,7 +46,7 @@
                         <input type="hidden" class="form-control" placeholder="ID" aria-label="ID"
                                th:field="*{id}"/>
                         <div class="modal-header">
-                            <h5 class="modal-title">New product</h5>
+                            <h5 class="modal-title">Product details</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body row g-3">
