--- a/gistguild-node/src/main/resources/templates/order.html
+++ b/gistguild-node/src/main/resources/templates/order.html
@@ -35,6 +35,74 @@
         <hr/>
         <h2>Orders list</h2>
         <hr/>
+
+        <div class="modal fade" id="orderModal" tabindex="-1" aria-labelledby="Order" aria-hidden="true">
+
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content bg-dark">
+                    <form action="#" th:action="@{/order}" th:object="${newOrder}" method="post" onsubmit="progress()">
+                        <input type="hidden" class="form-control" placeholder="ID" aria-label="ID"
+                               th:field="*{id}"/>
+                        <input type="hidden" class="form-control" placeholder="productId" aria-label="productId"
+                               th:field="*{productId}"/>
+                        <div class="modal-header">
+                            <h5 class="modal-title">Order details</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body row g-3">
+                            <div class="col-12">
+                                <input type="text" class="form-control" placeholder="Product name" aria-label="Product name"
+                                       th:field="*{productName}" disabled/>
+                            </div>
+                            <div class="col-12">
+                                <input type="email" class="form-control" placeholder="Customer mail" aria-label="Customer mail"
+                                       th:field="*{customerMail}" disabled/>
+                            </div>
+                            <div class="row g-3">
+                                <div class="col">
+                                    <input type="number" class="form-control" placeholder="Quantity" aria-label="Quantity"
+                                           th:field="*{quantity}" disabled/>
+                                </div>
+                                <div class="col">
+                                    <input type="number" class="form-control" placeholder="Amount"
+                                           aria-label="Amount" th:field="*{amount}" disabled/>
+                                </div>
+                            </div>
+                            <div class="row g-3">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Address" aria-label="Address"
+                                           th:field="*{address}" disabled/>
+                                </div>
+                            </div>
+                            <div class="row g-3">
+                                <div class="col-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="activationToggle"
+                                               th:field="*{deleted}">
+                                        <label class="form-check-label" for="activationToggle">
+                                            Deleted
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row g-3">
+                                <div class="progress" id="progressbar_div" style="display: none;">
+                                    <div id="progressbar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
+                                        <span id="current-progress"></span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <input class="btn btn-primary" type="reset" value="Reset">
+                            <input class="btn btn-success" type="submit" value="Submit">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
         <table class="table table-dark table-striped table-hover">
             <thead>
             <tr>
@@ -44,6 +112,7 @@
                 <th scope="col">Amount</th>
                 <th scope="col">Address</th>
                 <th scope="col">Insertion date/time</th>
+                <th scope="col">Status</th>
                 <th scope="col">Actions</th>
             </tr>
             </thead>
@@ -56,15 +125,21 @@
                 <td scope="row" th:text="${item.address}"></td>
                 <td scope="row" th:text="${item.timestamp}+' by '+${item.nodeInstanceName}"></td>
                 <td scope="row">
-                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                        <button type="button" class="btn btn-danger btn-sm">
+                    <div th:if="${item.deleted}">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
+                            <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                        </svg>
+                    </div>
+                </td>
+                <td scope="row">
+                    <div class="btn-group" role="group" aria-label="Actions">
+                        <a role="button" class="btn btn-warning btn-sm" th:href="'/order/'+${item.getId()}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                 class="bi bi-trash" viewBox="0 0 16 16">
-                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                                <path fill-rule="evenodd"
-                                      d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                                 class="bi bi-pencil" viewBox="0 0 16 16">
+                                <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
                             </svg>
-                        </button>
+                        </a>
                     </div>
                 </td>
             </tr>
@@ -72,5 +147,32 @@
         </table>
     </main>
 </div>
+<script th:inline="javascript">
+    /*<![CDATA[*/
+    if ([[${newOrder.id}]] != null) {
+        var productModal = new bootstrap.Modal(document.getElementById("orderModal"), {});
+        productModal.show();
+    }
+
+    function progress() {
+        var current_progress = 0;
+        var interval = setInterval(function() {
+            if (current_progress > 100) {
+                clearInterval(interval);
+                $("#progressbar_div")
+                    .hide()
+            } else {
+                $("#progressbar")
+                    .css("width", current_progress + "%")
+                    .attr("aria-valuenow", current_progress)
+                    .text(current_progress + "% Complete");
+                $("#progressbar_div")
+                    .show()
+            }
+            current_progress += 10;
+        }, 1000);
+    }
+    /*]]>*/
+</script>
 </body>
 </html>
