--- a/gistguild-node/src/main/resources/templates/order.html
+++ b/gistguild-node/src/main/resources/templates/order.html
@@ -123,7 +123,7 @@
                 <td scope="row" th:text="${item.quantity}"></td>
                 <td scope="row" th:text="${item.amount}"></td>
                 <td scope="row" th:text="${item.address}"></td>
-                <td scope="row" th:text="${item.timestamp}+' by '+${item.nodeInstanceName}"></td>
+                <td scope="row" th:text="${item.timestamp}"></td>
                 <td scope="row">
                     <div th:if="${item.deleted}">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
