Product ownerMail suppressed

--- a/gistguild-node/src/main/resources/templates/order.html
+++ b/gistguild-node/src/main/resources/templates/order.html
@@ -55,7 +55,7 @@
                                        th:field="*{productName}" disabled/>
                             </div>
                             <div class="col-12">
-                                <input type="email" class="form-control" placeholder="Customer nickname" aria-label="Customer nickname"
+                                <input type="text" class="form-control" placeholder="Customer nickname" aria-label="Customer nickname"
                                        th:field="*{customerNickname}" disabled/>
                             </div>
                             <div class="row g-3">
