--- a/gistguild-node/src/main/resources/templates/welcome.html
+++ b/gistguild-node/src/main/resources/templates/welcome.html
@@ -26,6 +26,7 @@
                 <a class="nav-link fw-bold py-1 px-0" href="/product">Catalog</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/participant">Participants</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/order">Orders</a>
+                <a class="nav-link fw-bold py-1 px-0" href="/logout">Logout</a>
             </nav>
         </div>
     </header>
