--- a/gistguild-node/src/main/resources/templates/order.html
+++ b/gistguild-node/src/main/resources/templates/order.html
@@ -25,7 +25,7 @@
                 <a class="nav-link fw-bold py-1 px-0" href="/">Home</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/product">Catalog</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/participant">Participants</a>
-                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"  href="/order">Orders</a>
+                <a class="nav-link fw-bold py-1 px-0 active" aria-current="page"  href="/orderInProgress">Orders</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/logout">Logout</a>
             </nav>
         </div>
@@ -87,6 +87,17 @@
                                 </div>
                             </div>
                             <div class="row g-3">
+                                <div class="col-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" id="deliveryToggle"
+                                               th:field="*{delivered}">
+                                        <label class="form-check-label" for="deliveryToggle">
+                                            Delivered
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row g-3">
                                 <div class="progress" id="progressbar_div" style="display: none;">
                                     <div id="progressbar" class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;">
                                         <span id="current-progress"></span>
@@ -103,6 +114,9 @@
                 </div>
             </div>
         </div>
+
+        <a th:if="${inProgress == true}" class="nav-link fw-bold py-1 px-0 active" aria-current="page"  href="/order">Show all order history</a>
+        <a th:if="${inProgress == false}" class="nav-link fw-bold py-1 px-0 active" aria-current="page"  href="/orderInProgress">Show only order in progress</a>
 
         <table class="table table-dark table-striped table-hover">
             <thead>
