--- a/gistguild-node/src/main/resources/templates/product.html
+++ b/gistguild-node/src/main/resources/templates/product.html
@@ -27,7 +27,7 @@
                 <a class="nav-link fw-bold py-1 px-0" href="/">Home</a>
                 <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/product">Catalog</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/participant">Participants</a>
-                <a class="nav-link fw-bold py-1 px-0" href="/order">Orders</a>
+                <a class="nav-link fw-bold py-1 px-0" href="/orderInProgress">Orders</a>
                 <a class="nav-link fw-bold py-1 px-0" href="/logout">Logout</a>
             </nav>
         </div>
