--- a/gistguild-node/src/main/resources/templates/order.html
+++ b/gistguild-node/src/main/resources/templates/order.html
@@ -130,7 +130,7 @@
                 <th scope="col">Address</th>
                 <th scope="col">Insertion date/time</th>
                 <th scope="col">Status</th>
-                <th scope="col">Actions</th>
+                <th scope="col" th:if="${inProgress == true}">Actions</th>
             </tr>
             </thead>
             <tbody>
@@ -159,7 +159,7 @@
                         </svg>
                     </div>
                 </td>
-                <td scope="row">
+                <td scope="row" th:if="${inProgress == true}">
                     <div class="btn-group" role="group" aria-label="Actions">
                         <a role="button" class="btn btn-warning btn-sm" th:href="'/order/'+${item.getId()}">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
