Send message button added tu participant list

--- a/gistguild-node/src/main/resources/templates/participant.html
+++ b/gistguild-node/src/main/resources/templates/participant.html
@@ -36,6 +36,26 @@
         <h2>Participants list</h2>
         <hr/>
 
+        <div class="modal fade" id="participantMessageModal" tabindex="-1" aria-labelledby="Message" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content bg-dark">
+                    <form action="#" th:action="@{/communication}" th:object="${newCommunication}" method="post">
+                        <input type="hidden" class="form-control" placeholder="recipientTelegramUserId" aria-label="recipientTelegramUserId" th:field="*{recipientTelegramUserId}"/>
+                        <div class="modal-body row g-3">
+                            <div class="col-12">
+                                <textarea class="form-control" placeholder="Message" aria-label="message" th:field="*{message}"/>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <input class="btn btn-primary" type="reset" value="Reset">
+                            <input class="btn btn-success" type="submit" value="Submit">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
         <div class="modal fade" id="participantModal" tabindex="-1" aria-labelledby="Order" aria-hidden="true">
 
             <div class="modal-dialog modal-xl">
@@ -150,6 +170,11 @@
                                 <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
                             </svg>
                         </a>
+                        <a role="button" class="btn btn-primary btn-sm" th:href="'/communication/'+${item.getId()}">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-send" viewBox="0 0 16 16">
+                                <path d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576 6.636 10.07Zm6.787-8.201L1.591 6.602l4.339 2.76 7.494-7.493Z"/>
+                            </svg>
+                        </a>
                     </div>
                 </td>
                 </td>
@@ -163,7 +188,11 @@
     if ([[${newParticipant.id}]] != null) {
         var participantModal = new bootstrap.Modal(document.getElementById("participantModal"), {});
         participantModal.show();
+    } else if ([[${newCommunication.recipientTelegramUserId}]] != null) {
+        var participantMessageModal = new bootstrap.Modal(document.getElementById("participantMessageModal"), {});
+        participantMessageModal.show();
     }
+
 
     function progress() {
         var current_progress = 0;
